Synchronize all access to timelineView (naive fix for ConcurrentModificationException) #321858